src/objects/Employee__c.object
<CustomObject>
    <description>AstrumTIME - An Astrum Solar Employee Record for the AstumTIME app</description>
    <fields>
        <fullName>Department__c</fullName>
        <description>Employee&apos;s Department</description>
        <inlineHelpText>Employee&apos;s Department</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Class__c</fullName>
        <description>Suffix the Employee Class with &quot;- NP&quot; to indicate if they dont need access to Install Projects. All the other Employee Class will be prompted to select Project.</description>
        <label>Employee Class</label>
        <picklist>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales - NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <description>Insperity Employee Number</description>
        <externalId>true</externalId>
        <inlineHelpText>Insperity Employee Number</inlineHelpText>
        <label>Employee Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_PIN__c</fullName>
        <label>Employee PIN</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holiday_Rate__c</fullName>
        <description>Hourly Rate For Special Holidays</description>
        <inlineHelpText>Hourly Rate For Special Holidays</inlineHelpText>
        <label>Holiday Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Office_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A lookup to the office location to have information about potential CA overtime rules</description>
        <label>Home Office Location</label>
        <referenceTo>Office_Location__c</referenceTo>
        <relationshipLabel>Employees (Office Location)</relationshipLabel>
        <relationshipName>Employees1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Office__c</fullName>
        <description>Employee&apos;s Home Office</description>
        <inlineHelpText>Employee&apos;s Home Office</inlineHelpText>
        <label>Home Office</label>
        <picklist>
            <picklistValues>
                <fullName>Columbia, MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corona, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cromwell, CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fresno, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henrietta, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hopkinton, MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Island, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middletown, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norristown, PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsauken, NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ronkonkoma, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simi Valley, CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Springfield, MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syracuse, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taunton, MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Westford, MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youngstown, OH</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_String__c</fullName>
        <description>Hourly rate string</description>
        <inlineHelpText>Hourly rate string</inlineHelpText>
        <label>Hourly Rate String</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <description>Employee&apos;s Standard Hourly Rate</description>
        <inlineHelpText>Employee&apos;s Standard Hourly Rate</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insperity_Name__c</fullName>
        <description>Name of This Employee in the Insperity Payroll System</description>
        <inlineHelpText>Name of This Employee in the Insperity Payroll System</inlineHelpText>
        <label>Insperity Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Employee is Currently a Member of What Install Team?</description>
        <inlineHelpText>This Employee is Currently a Member of What Install Team?</inlineHelpText>
        <label>Install Team</label>
        <referenceTo>Install_Team__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Employee&apos;s Job Title</description>
        <inlineHelpText>Employee&apos;s Job Title</inlineHelpText>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Electrician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surveyor/Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overtime_Hourly_Rate_String__c</fullName>
        <description>Overtime Hourly Rate String</description>
        <inlineHelpText>Overtime Hourly Rate String</inlineHelpText>
        <label>Overtime Hourly Rate String</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overtime_Rate__c</fullName>
        <description>Overtime Rate in $/hr is 1.5 Standard Hourly Rate</description>
        <formula>Hourly_Rate__c * 1.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Overtime Rate in $/hr is 1.5 Standard Hourly Rate</inlineHelpText>
        <label>Overtime Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFDC_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Install/Electrical Lead&apos;s Salesforce User</inlineHelpText>
        <label>SFDC User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1099</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W-2 - Weekly Temp EES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W-2 - Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee&apos;s Supervisor</description>
        <inlineHelpText>Employee&apos;s Supervisor</inlineHelpText>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>My_Employees</fullName>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>Department__c</columns>
        <columns>Home_Office__c</columns>
        <columns>Status__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Employee_Number__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filters>
        <label>My Employees</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>